--- a/index.html
+++ b/index.html
@@ -9,7 +9,11 @@
 </head>
 <body>
     <h1>Look at all my Pokemon!</h1>
+    
+    <div id="container">
 
-    <script src="script.js"></script>
+    </div>
+
+    <script type="text/javascript" src="script.js"></script>
 </body>
 </html>
